--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "id": "2c142052-8e81-41b3-8865-ac26abbf0809",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "id": "874ac33d-abc0-49cf-93f7-02337c58788f",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "id": "b2b63510-890b-42b0-9f23-29a3919babb0",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "id": "128b0484-98c0-4d7b-9f75-7b32017481dd",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "id": "da306b9d-588d-48c3-b05b-3cd84520f153",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "id": "7235bdb9-d479-4656-aed1-1551ec91194c",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 85,
    "id": "4da1e848-694b-4e80-a0a3-f5c40b244eeb",
    "metadata": {},
    "outputs": [
@@ -260,13 +260,32 @@
        "       'UnitPrice', 'CustomerID', 'Country'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c54ca7-a409-485f-9623-f6e7207fafd1",
+   "metadata": {},
+   "source": [
+    "# Sauvegarde des données mise de côté"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bb3cc952-e987-4568-8ea4-ee28d2d9ebf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = pd.DataFrame() # Met les erreurs dans un tableau\n",
+    "countErr = {}        # Comptabilise les erreurs "
    ]
   },
   {
@@ -291,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "id": "f412e69e-9418-45d7-85b5-b2fe055bfbf1",
    "metadata": {},
    "outputs": [
@@ -325,17 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "id": "4a82f11e-17e9-49f8-8751-fd64072e6954",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unsp = df.loc[df['Country'] == \"Unspecified\"]"
+    "errCountry = df.loc[df['Country'] == \"Unspecified\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "id": "f95c7c08-8770-458c-a377-c93fa76adcb1",
    "metadata": {},
    "outputs": [
@@ -345,18 +364,18 @@
        "83"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unsp.shape[0]"
+    "errCountry.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "id": "b4a29a4b-b03c-475a-a41a-c3a616d7eb0c",
    "metadata": {},
    "outputs": [
@@ -467,13 +486,115 @@
        "152716  4/11/2011 13:29       0.55     12363.0  Unspecified  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unsp.head()"
+    "errCountry.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "2fbd3621-e4c0-4ff3-a274-2db74a4fa208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = pd.concat([err, errCountry])\n",
+    "countErr[\"Pays\"] = errCountry.shape[0] + (0 if countErr.get('Pays')==None else countErr.get('Pays'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4781df8-ec46-4d82-bb52-a861bd061f85",
+   "metadata": {},
+   "source": [
+    "## None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "0b0ced1f-43cb-4b4e-bffc-ab96c67e8cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errCountry = cdf.loc[cdf[\"Country\"]==None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5c2ca958-2157-4841-a46b-6b1ae6437219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 8)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errCountry.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "10a426ed-7ecb-4109-8c73-e557c91b0e9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = pd.concat([err, errCountry])\n",
+    "countErr[\"Pays\"] = errCountry.shape[0] + (0 if countErr.get('Pays')==None else countErr.get('Pays'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "645743d0-8319-48a0-a787-07c53d57a2ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       InvoiceNo StockCode                         Description  Quantity  \\\n",
+      "152712    549687     20685               DOORMAT RED RETROSPOT         2   \n",
+      "152713    549687     22691             DOORMAT WELCOME SUNRISE         2   \n",
+      "152714    549687     48116          DOORMAT MULTICOLOUR STRIPE         2   \n",
+      "152715    549687     21213         PACK OF 72 SKULL CAKE CASES        24   \n",
+      "152716    549687     21977  PACK OF 60 PINK PAISLEY CAKE CASES        24   \n",
+      "\n",
+      "            InvoiceDate  UnitPrice  CustomerID      Country  \n",
+      "152712  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152713  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152714  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152715  4/11/2011 13:29       0.55     12363.0  Unspecified  \n",
+      "152716  4/11/2011 13:29       0.55     12363.0  Unspecified  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Pays': 83}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(err.head())\n",
+    "countErr"
    ]
   },
   {
@@ -506,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 97,
    "id": "8303d2f7-2ef2-47f4-963d-e0de77fbd9f8",
    "metadata": {},
    "outputs": [
@@ -516,7 +637,7 @@
        "'17850.0'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,69 +650,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 107,
    "id": "9fc9a22c-880d-4b6a-a947-bdfbf7e128ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>InvoiceNo</th>\n",
-       "      <th>StockCode</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>UnitPrice</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [InvoiceNo, StockCode, Description, Quantity, InvoiceDate, UnitPrice, CustomerID, Country]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cdf[cdf['CustomerID'].str.match(\"\\.[1-9]\") == True]"
+    "errCID = cdf[cdf['CustomerID'].str.match(\"\\.[1-9]\") == True]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 108,
+   "id": "c11175ec-2196-401c-bdaa-b21e2ab743ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = pd.concat([err, errCID])\n",
+    "countErr[\"CustomerID\"] = errCID.shape[0] + (0 if countErr.get('CustomerID')==None else countErr.get('CustomerID'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "c3f80f80-ed43-4dea-a6bd-5990fe8da0c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "cdf[\"CustomerID\"] = df[\"CustomerID\"].astype(str).replace('\\.\\d+', '', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "5817d42a-32a6-49d1-be1c-aa7b4b0173b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       InvoiceNo StockCode                         Description  Quantity  \\\n",
+      "152712    549687     20685               DOORMAT RED RETROSPOT         2   \n",
+      "152713    549687     22691             DOORMAT WELCOME SUNRISE         2   \n",
+      "152714    549687     48116          DOORMAT MULTICOLOUR STRIPE         2   \n",
+      "152715    549687     21213         PACK OF 72 SKULL CAKE CASES        24   \n",
+      "152716    549687     21977  PACK OF 60 PINK PAISLEY CAKE CASES        24   \n",
+      "\n",
+      "            InvoiceDate  UnitPrice  CustomerID      Country  \n",
+      "152712  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152713  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152714  4/11/2011 13:29       7.95     12363.0  Unspecified  \n",
+      "152715  4/11/2011 13:29       0.55     12363.0  Unspecified  \n",
+      "152716  4/11/2011 13:29       0.55     12363.0  Unspecified  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Pays': 83, 'CustomerID': 0}"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(err.head())\n",
+    "countErr"
    ]
   },
   {
@@ -722,27 +848,6 @@
    ],
    "source": [
     "cdf[cdf['CustomerID'].str.match(\"^\\d{5}$\") == False].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "bcc81ebe-af1b-4cfd-a8f4-13ce1a91ce58",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(69014, 8)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cdf[cdf['CustomerID'].str.match(\"^\\d{5}$\") == False].shape"
    ]
   },
   {
