--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2c142052-8e81-41b3-8865-ac26abbf0809",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "874ac33d-abc0-49cf-93f7-02337c58788f",
    "metadata": {},
    "outputs": [],
@@ -294,6 +294,34 @@
    "metadata": {},
    "source": [
     "# Doublon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c0eb254-b8e8-4a6e-b229-9c0c5e1c31c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\devia.e05\\AppData\\Local\\Temp\\ipykernel_15152\\915533726.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  errDuplicated[\"Erreur\"] = \"Doublon\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe = df.copy()\n",
+    "d = dataframe.duplicated(subset = ['InvoiceNo', 'StockCode']) # return a boolean vector\n",
+    "errDuplicated = dataframe[d==True]\n",
+    "#errDuplicated.head()\n",
+    "errDuplicated[\"Erreur\"] = \"Doublon\"\n",
+    "\n"
    ]
   },
   {
@@ -935,6 +963,7 @@
    "cell_type": "markdown",
    "id": "4050dedf-7c47-4cfe-9559-ce0c8e24248f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1376,7 +1405,10 @@
   {
    "cell_type": "markdown",
    "id": "e705dee0-4b0f-4d8f-b99a-eaca3fa740a4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Cast column to str"
    ]
@@ -2658,7 +2690,10 @@
   {
    "cell_type": "markdown",
    "id": "6bb95c94-69f7-4cba-9ea6-55df99438146",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# InvoiceNo"
    ]
