restructuration du code et des fichiers

--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "id": "78baa126-49e5-41ce-aa95-9c9db7ddb7bf",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Bibliothèque"
    ]
@@ -22,6 +25,7 @@
    "cell_type": "markdown",
    "id": "38040699-0bb0-42c8-8bca-f4eb228dce25",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -43,6 +47,7 @@
    "cell_type": "markdown",
    "id": "bcc019a4-2d0a-4a83-a7f7-c8b5563eea1d",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -272,7 +277,10 @@
   {
    "cell_type": "markdown",
    "id": "29c54ca7-a409-485f-9623-f6e7207fafd1",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Sauvegarde des données mise de côté"
    ]
@@ -291,7 +299,10 @@
   {
    "cell_type": "markdown",
    "id": "ab572381-95b3-4797-b8f9-b0d7e47db57a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Doublon"
    ]
@@ -2876,7 +2887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
