--- a/ressource/ETL/script.ipynb
+++ b/ressource/ETL/script.ipynb
@@ -2702,11 +2702,21 @@
    "cell_type": "markdown",
    "id": "6bb95c94-69f7-4cba-9ea6-55df99438146",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "# InvoiceNo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe133ec-12fa-4264-97dd-5d7e2a150e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "dataframe = pd.read_csv('../data/rData.csv', encoding=\"unicode_escape\")"
    ]
   },
   {
@@ -2868,7 +2878,183 @@
    "id": "f4be9e1b-fd8c-4db7-89ea-30aee48ad12b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dIN = dataframe.duplicated(subset = ['InvoiceNo'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0e397c3-06c3-4c1f-b818-2b9eb28b381b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dIN]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c2a496a-1c46-4ca0-8c47-4300913f1127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dataframe['InvoiceNo']==\"543162\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3098fd67-07ac-4597-9a88-579ea01177f5",
+   "metadata": {},
+   "source": [
+    "# InvoiceNo and InvoiceDate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182c40d2-e8d7-49b2-8d39-9b8e87c8a7f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dIND = dataframe.duplicated(subset = ['InvoiceNo', \"InvoiceDate\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df0624fa-2c1e-4af6-ac08-eb8119ecb833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dIND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6a2c9f5-5e05-40a7-900d-9a8f07dad19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dIND==False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3fed08-0e7e-4403-a692-389f356013e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[(dataframe['InvoiceNo']==\"543162\")&(dataframe['InvoiceDate']!=\"2/3/2011 18:08\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34050b3e-b0b2-4e49-b904-7dcd3f88b7c6",
+   "metadata": {},
+   "source": [
+    "# StockCode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9660616e-9c52-4391-a9c2-f554b44cd1b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSC = dataframe.duplicated(subset = ['StockCode'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cea35cb-6aac-4e0d-8aa4-99806715ff28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c172b6-b61c-4433-b580-f8c2dd083c1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dSC]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "668bdc8f-22a4-4c1b-a208-0d7ff8960f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dataframe['StockCode']==\"22423\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37138dfd-b364-43b4-8995-4814f2208a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSCandD = dataframe.duplicated(subset = ['StockCode', \"Description\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b32b131-8ed9-4924-800f-37c3ce8a1e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dSCandD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28b5c055-a9ce-4047-9b88-18ee2fc8951a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[dSCandD]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "857d5539-9395-4fed-a553-f42ab69fcab1",
+   "metadata": {},
+   "source": [
+    "# StockCode and Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7525485a-5199-4dec-8b0d-a0f84738fb5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe[(dataframe['StockCode']==\"22423\")&(dataframe['Description']==\"REGENCY CAKESTAND 3 TIER\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44209c12-ab39-4f2c-a46d-f2f684c9fde2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = dataframe[dataframe['StockCode']==\"22423\"]"
+   ]
   }
  ],
  "metadata": {
@@ -2887,7 +3073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
